--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -11,18 +11,10 @@ general {
         interval = 5
 }
 
-order += "ipv6"
 order += "disk /"
-order += "wireless _first_"
 order += "ethernet _first_"
-order += "battery all"
 order += "load"
 order += "tztime local"
-
-wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
-}
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
@@ -35,7 +27,7 @@ battery all {
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%Y-%m-%d %H:%M"
 }
 
 load {
