--- a/.config/i3/config
+++ b/.config/i3/config
@@ -152,6 +152,7 @@ bar {
         status_command i3status
 }
 
+exec dunst
 exec --no-startup-id nm-applet
 assign [class="Firefox"] 2
 assign [class="Code"] 3
