--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -14,6 +14,7 @@ general {
 order += "disk /"
 order += "ethernet _first_"
 order += "load"
+order += "cpu_usage"
 order += "tztime local"
 
 ethernet _first_ {
@@ -32,6 +33,10 @@ tztime local {
 
 load {
         format = "%1min"
+}
+
+cpu_usage {
+        format = "all: %usage"
 }
 
 disk "/" {
