--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,7 @@ set -sg escape-time 1
 set-option -g allow-rename off
 
 # mouse control (clickable windows, panes, resizable panes)
-set -g mode-mouse on
+set -g mouse on
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
