--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,8 +39,8 @@ bind -n M-Down select-pane -D
 
 # enable vi mode keys
 set-window-option -g mode-keys vi
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # set default terminal mode to 256 colors
 set -g default-terminal "screen-256color"
